--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -1,1 +1,25 @@
-Index
+.page-header
+    %h1
+        2015 Giveaway Winners
+
+.center
+    %a.btn.btn-success.btn-lg{:href => "?winners"} Pick Winners
+    %br
+    %br
+    %small You can press this button multiple times, it will pick new winners every time.
+
+%br
+
+- if @winners
+    .center
+        %p There were #{number_with_delimiter(@total)} entries. Picking #{@num} random numbers from 1 to #{number_with_delimiter(@total)}.
+    %dl.dl-horizontal
+        - @winners.each do |w|
+            %dt= number_with_delimiter(w[:num])
+            %dd
+                %a{:href => w[:entry][:channel], :target => :blank}= w[:entry][:name]
+                left #{w[:entry][:total]} comment#{w[:entry][:total] == 1 ? "" : "s"}
+                %ol
+                    - w[:entry][:comments].each do |comment|
+                        %li
+                            %a{:href => "https://www.youtube.com/watch?v=JYqE8dSiXJE&lc=" + comment[:id].split(".")[0], :target => :blank}= comment[:text].html_safe
